--- a/simplic-interval/Simplic.Interval.Data.DB/packages.config
+++ b/simplic-interval/Simplic.Interval.Data.DB/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.30" targetFramework="net48" />
-  <package id="Simplic.Cache" version="6.0.18.619" targetFramework="net451" />
-  <package id="Simplic.CoreLib" version="6.14.318.906" targetFramework="net451" />
-  <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
-  <package id="Simplic.Data.Sql" version="1.13.118.1029" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Simplic.Cache" version="6.1.20.217" targetFramework="net48" />
+  <package id="Simplic.CoreLib" version="6.17.20.322" targetFramework="net48" />
+  <package id="Simplic.Data" version="1.6.20.322" targetFramework="net48" />
+  <package id="Simplic.Data.Sql" version="1.14.20.322" targetFramework="net48" />
   <package id="Simplic.Sql" version="6.2.18.926" targetFramework="net451" />
 </packages>
