--- a/simplic-interval/Simplic.Interval/packages.config
+++ b/simplic-interval/Simplic.Interval/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Simplic.CoreLib" version="6.14.18.814" targetFramework="net461" />
-  <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Simplic.CoreLib" version="6.17.20.322" targetFramework="net48" />
 </packages>
