--- a/simplic-sms/Simplic.Sms/Simplic.Sms.csproj
+++ b/simplic-sms/Simplic.Sms/Simplic.Sms.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.Sms</RootNamespace>
     <AssemblyName>Simplic.Sms</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,10 +45,6 @@
     <Compile Include="Model\SmsQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\SmsStatus.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="package.bat" />
-    <None Include="Simplic.Sms.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
