--- a/simplic-taskscheduler/azure-pipelines.yml
+++ b/simplic-taskscheduler/azure-pipelines.yml
@@ -5,9 +5,7 @@ trigger:
     - dev
   paths:
     include:
-    - src/*
-    - test/*
-    - azure-pipelines.yml
+    - simplic-taskscheduler/*
 
 pr:
   branches:
@@ -28,28 +26,28 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
-    restoreSolution: 'simplic-group/**/*.sln'
+    restoreSolution: 'simplic-taskscheduler/**/*.sln'
     feedsToUse: 'select'
     vstsFeed: 'f7087ef5-bf6f-48b2-8b8b-5e513f4a7a9e'
 
 - task: MSBuild@1
   inputs:
-    solution: 'simplic-group/**/*.sln'
+    solution: 'simplic-taskscheduler/**/*.sln'
     configuration: '$(buildConfiguration)'
 
 - task: VSTest@2
   inputs:
     testSelector: 'testAssemblies'
     testAssemblyVer2: |
-      **\Simplic.Group.Test.dll
+      **\Simplic.TaskScheduler.Test.dll
       !**\*TestAdapter.dll
       !**\obj\**
-    searchFolder: 'simplic-group'
+    searchFolder: 'simplic-taskscheduler'
 
 - task: NuGetCommand@2
   inputs:
     command: 'pack'
-    packagesToPack: 'simplic-group/Simplic.Group**/*.csproj;!simplic-group/Simplic.Group.Test/Simplic.Group.Test.csproj'
+    packagesToPack: 'simplic-taskscheduler/Simplic.TaskScheduler**/*.csproj;!simplic-taskscheduler/Simplic.TaskScheduler.Test/Simplic.TaskScheduler.Test.csproj'
     configuration: '$(buildConfiguration)'
     versioningScheme: 'off'
 
@@ -57,7 +55,7 @@ steps:
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
   inputs:
     command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/Simplic.Group.*.nupkg;!$(Build.ArtifactStagingDirectory)/Simplic.Group.*.symbols.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/Simplic.TaskScheduler.*.nupkg;!$(Build.ArtifactStagingDirectory)/Simplic.TaskScheduler.*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: 'f7087ef5-bf6f-48b2-8b8b-5e513f4a7a9e'
     allowPackageConflicts: true
