--- a/simplic-taskscheduler/Simplic.TaskScheduler.Data.DB/Simplic.TaskScheduler.Data.DB.csproj
+++ b/simplic-taskscheduler/Simplic.TaskScheduler.Data.DB/Simplic.TaskScheduler.Data.DB.csproj
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Simplic.Framework.Repository">
-      <HintPath>..\..\..\simplic-framework\src\Simplic.Main\bin\Debug\Simplic.Framework.Repository.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -62,6 +59,9 @@
     </PackageReference>
     <PackageReference Include="Simplic.Data">
       <Version>1.6.120.322</Version>
+    </PackageReference>
+    <PackageReference Include="Simplic.Framework.Repository">
+      <Version>7.2.20.321</Version>
     </PackageReference>
     <PackageReference Include="Simplic.Sql">
       <Version>6.3.20.322</Version>
