--- a/simplic-user/Simplic.User.UI/packages.config
+++ b/simplic-user/Simplic.User.UI/packages.config
@@ -25,6 +25,8 @@
   <package id="Simplic.Framework.Repository" version="7.2.120.329" targetFramework="net48" />
   <package id="Simplic.Group" version="6.0.18.619" targetFramework="net48" />
   <package id="Simplic.Group.Service" version="6.0.18.619" targetFramework="net48" />
+  <package id="Simplic.Icon" version="6.0.18.620" targetFramework="net48" />
+  <package id="Simplic.Icon.UI" version="6.1.18.917" targetFramework="net48" />
   <package id="Simplic.Localization" version="6.0.118.913" targetFramework="net48" />
   <package id="Simplic.Localization.Service" version="6.1.18.917" targetFramework="net48" />
   <package id="Simplic.Log" version="7.2.120.329" targetFramework="net48" />
