--- a/simplic-user/Simplic.User.UI/app.config
+++ b/simplic-user/Simplic.User.UI/app.config
@@ -26,6 +26,10 @@
         <assemblyIdentity name="Unity.Abstractions" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.11.2.0" newVersion="5.11.2.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Telerik.Windows.Controls.RibbonView" publicKeyToken="5803cfa389c90ce7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2020.1.218.45" newVersion="2020.1.218.45" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
