--- a/simplic-user/Simplic.User.UI/packages.config
+++ b/simplic-user/Simplic.User.UI/packages.config
@@ -29,6 +29,7 @@
   <package id="Simplic.Icon.UI" version="6.1.18.917" targetFramework="net48" />
   <package id="Simplic.Localization" version="6.0.118.913" targetFramework="net48" />
   <package id="Simplic.Localization.Service" version="6.1.18.917" targetFramework="net48" />
+  <package id="Simplic.Localization.UI" version="1.0.0.2" targetFramework="net48" />
   <package id="Simplic.Log" version="7.2.120.329" targetFramework="net48" />
   <package id="Simplic.Session" version="6.4.20.322" targetFramework="net48" />
   <package id="Simplic.Session.Service" version="6.4.20.322" targetFramework="net48" />
