--- a/simplic-user/Simplic.User.UI/packages.config
+++ b/simplic-user/Simplic.User.UI/packages.config
@@ -35,6 +35,7 @@
   <package id="Simplic.Session.Service" version="6.4.20.322" targetFramework="net48" />
   <package id="Simplic.Sql" version="6.3.20.322" targetFramework="net48" />
   <package id="Simplic.Sql.SqlAnywhere.Service" version="5.95.418.101" targetFramework="net48" />
+  <package id="Simplic.Studio.UI.Input" version="1.3.520.328" targetFramework="net48" />
   <package id="Simplic.TenantSystem" version="2.0.120.41" targetFramework="net48" />
   <package id="Simplic.TenantSystem.Data.DB" version="2.0.20.331" targetFramework="net48" />
   <package id="Simplic.TenantSystem.Service" version="2.0.20.331" targetFramework="net48" />
