--- a/simplic-user/Simplic.User.UI/Simplic.User.UI.csproj
+++ b/simplic-user/Simplic.User.UI/Simplic.User.UI.csproj
@@ -167,6 +167,9 @@
     <Reference Include="Simplic.Sql.SqlAnywhere.Service, Version=5.95.418.101, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Simplic.Sql.SqlAnywhere.Service.5.95.418.101\lib\net48\Simplic.Sql.SqlAnywhere.Service.dll</HintPath>
     </Reference>
+    <Reference Include="Simplic.Studio.UI.Input, Version=1.3.520.328, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Studio.UI.Input.1.3.520.328\lib\net48\Simplic.Studio.UI.Input.dll</HintPath>
+    </Reference>
     <Reference Include="Simplic.TenantSystem, Version=2.0.120.41, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Simplic.TenantSystem.2.0.120.41\lib\net48\Simplic.TenantSystem.dll</HintPath>
     </Reference>
@@ -287,7 +290,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\GroupsToLabelConverter.cs" />
     <Compile Include="Converters\InvertBooleanConverter.cs" />
     <Compile Include="Converters\MultiComboboxConverter.cs" />
@@ -300,28 +302,17 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="simplic-repository\Localization\usermanagment.de-DE.json" />
-    <None Include="simplic-repository\Localization\usermanagment.en-US.json" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
