--- a/simplic-user/Simplic.User.UI/Simplic.User.UI.csproj
+++ b/simplic-user/Simplic.User.UI/Simplic.User.UI.csproj
@@ -80,6 +80,9 @@
     <Reference Include="Microsoft.Scripting.Metadata, Version=1.1.2.22, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamicLanguageRuntime.1.1.2\lib\Net45\Microsoft.Scripting.Metadata.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.19\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -164,11 +167,8 @@
     <Reference Include="Simplic.Sql, Version=6.3.20.322, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Simplic.Sql.6.3.20.322\lib\net48\Simplic.Sql.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.Sql.SqlAnywhere.Service, Version=5.95.418.101, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Sql.SqlAnywhere.Service.5.95.418.101\lib\net48\Simplic.Sql.SqlAnywhere.Service.dll</HintPath>
-    </Reference>
-    <Reference Include="Simplic.Studio.UI.Input, Version=1.3.520.328, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Studio.UI.Input.1.3.520.328\lib\net48\Simplic.Studio.UI.Input.dll</HintPath>
+    <Reference Include="Simplic.Sql.SqlAnywhere.Service, Version=5.95.218.101, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Sql.SqlAnywhere.Service.5.95.218.101\lib\net451\Simplic.Sql.SqlAnywhere.Service.dll</HintPath>
     </Reference>
     <Reference Include="Simplic.TenantSystem, Version=2.0.120.41, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Simplic.TenantSystem.2.0.120.41\lib\net48\Simplic.TenantSystem.dll</HintPath>
@@ -201,9 +201,6 @@
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>Libs\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
