--- a/simplic-user/Simplic.User.UI/packages.config
+++ b/simplic-user/Simplic.User.UI/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework" version="6.4.0" targetFramework="net48" />
   <package id="iAnywhere.Data.SQLAnywhere.EF6" version="16.0.0.26144" targetFramework="net48" />
   <package id="IronPython" version="2.7.7" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net48" />
   <package id="Simplic.Base" version="7.2.120.329" targetFramework="net48" />
   <package id="Simplic.BaseDAL" version="7.2.120.329" targetFramework="net48" />
@@ -34,8 +35,7 @@
   <package id="Simplic.Session" version="6.4.20.322" targetFramework="net48" />
   <package id="Simplic.Session.Service" version="6.4.20.322" targetFramework="net48" />
   <package id="Simplic.Sql" version="6.3.20.322" targetFramework="net48" />
-  <package id="Simplic.Sql.SqlAnywhere.Service" version="5.95.418.101" targetFramework="net48" />
-  <package id="Simplic.Studio.UI.Input" version="1.3.520.328" targetFramework="net48" />
+  <package id="Simplic.Sql.SqlAnywhere.Service" version="5.95.218.101" targetFramework="net48" />
   <package id="Simplic.TenantSystem" version="2.0.120.41" targetFramework="net48" />
   <package id="Simplic.TenantSystem.Data.DB" version="2.0.20.331" targetFramework="net48" />
   <package id="Simplic.TenantSystem.Service" version="2.0.20.331" targetFramework="net48" />
