--- a/simplic-taskscheduler/azure-pipelines.yml
+++ b/simplic-taskscheduler/azure-pipelines.yml
@@ -11,6 +11,9 @@ pr:
   branches:
     include:
     - '*'
+  paths:
+    include:
+    - simplic-taskscheduler/*
 
 pool:
   vmImage: 'windows-latest'
