--- a/simplic-template-parser/azure-pipelines.yml
+++ b/simplic-template-parser/azure-pipelines.yml
@@ -13,6 +13,11 @@ pr:
   branches:
     include:
     - '*'
+  paths:
+    include:
+    - simplic-template-parser/src/*
+    - simplic-template-parser/test/*
+    - simplic-template-parser/azure-pipelines.yml
 
 pool:
   vmImage: 'windows-latest'
