--- a/simplic-data/Simplic.Data.Sql/Simplic.Data.Sql.csproj
+++ b/simplic-data/Simplic.Data.Sql/Simplic.Data.Sql.csproj
@@ -69,6 +69,9 @@
     <PackageReference Include="Simplic.CoreLib">
       <Version>6.14.418.1002</Version>
     </PackageReference>
+    <PackageReference Include="Simplic.Log">
+      <Version>7.2.120.329</Version>
+    </PackageReference>
     <PackageReference Include="Simplic.Sql">
       <Version>6.2.18.926</Version>
     </PackageReference>
